force-app/main/default/objects/Content_Post__c/Content_Post__c.object-meta.xml
<CustomObject>
    <description
  >Durable content/blog backbone for the LWR site (plan §3): trip reports (member-authored), news/announcements (staff), and reference posts. One object keeps the index, tag filter, and search uniform across types; record types drive create UX and permissions. OWD Private — authors own their records and edit their own; a sharing rule exposes Status=Published to members.</description>
    <label>Content Post</label>
    <nameField>
        <displayFormat>POST-{00000}</displayFormat>
        <label>Post Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Posts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>