force-app/main/default/objects/Content_Post__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description
  >Controlled activity vocabulary (plan §3.2). Drives auto-tagging and routing public posts to the matching activity-group approval queue (plan §5.5).</description>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Climbing</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Paddling</fullName>
            </value>
            <value>
                <fullName>Backpacking</fullName>
            </value>
            <value>
                <fullName>Conservation</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>