force-app/main/default/objects/Content_Post__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Rich-text body with inline images (plan §3.1).</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>