force-app/main/default/objects/Content_Post__c/fields/Flag_Count__c.field-meta.xml
<CustomField>
    <fullName>Flag_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Number of times this post has been flagged by users.</description>
    <label>Flag Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>