force-app/main/default/objects/Content_Post__c/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the post is currently flagged as inappropriate.</description>
    <label>Flagged</label>
    <type>Checkbox</type>
</CustomField>