force-app/main/default/objects/Content_Post__c/fields/Free_Tags__c.field-meta.xml
<CustomField>
    <fullName>Free_Tags__c</fullName>
    <description
  >Comma-separated user-defined free tags (plan §3.2) — members add their own without an admin minting picklist values. The tag filter queries these alongside the controlled Content_Tag__c vocabulary.</description>
    <label>Free Tags</label>
    <length>500</length>
    <type>Text</type>
</CustomField>