force-app/main/default/objects/Content_Post__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description
  >Location / region (e.g. "Minnehaha", "North Cascades").</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>