force-app/main/default/objects/Content_Post__c/fields/Public_Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Public_Review_Note__c</fullName>
    <description
  >Staff feedback/rejection note for public submissions.</description>
    <label>Public Review Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>