force-app/main/default/objects/Content_Post__c/fields/Public_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Review_Status__c</fullName>
    <description
  >The status of the public approval workflow (Not Requested, Pending, Approved, Rejected).</description>
    <label>Public Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>