force-app/main/default/objects/Content_Post__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <description
  >Date the post is/was published; for imported trip reports this preserves the original Chatter post date (plan §10.3).</description>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>