force-app/main/default/objects/Content_Post__c/fields/Source_Feed_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Feed_Item_Id__c</fullName>
    <description
  >Source Chatter FeedItem.Id for imported trip reports. External Id + unique so the rescue importer is idempotent — re-running on the same FeedItem creates no duplicates (plan §10.3).</description>
    <externalId>true</externalId>
    <label>Source FeedItem Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>