force-app/main/default/objects/Content_Post__c/fields/Submit_For_Public__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checked when the user wants to submit the post to be viewable by the public.</description>
    <label>Submit For Public</label>
    <type>Checkbox</type>
</CustomField>