force-app/main/default/objects/Content_Post__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description
  >Display title of the post (the record Name is an autonumber).</description>
    <label>Title</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>