force-app/main/default/objects/Content_Post__c/fields/Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date__c</fullName>
    <description>Date of the trip (Trip Report record type).</description>
    <label>Trip Date</label>
    <type>Date</type>
</CustomField>