force-app/main/default/objects/Content_Post__c/recordTypes/Announcement.recordType-meta.xml
<RecordType>
    <fullName>Announcement</fullName>
    <active>true</active>
    <description>Staff-authored news / announcement (plan §3.2).</description>
    <label>Announcement</label>
</RecordType>