force-app/main/default/objects/Content_Post__c/recordTypes/Reference.recordType-meta.xml
<RecordType>
    <fullName>Reference</fullName>
    <active>true</active>
    <description
  >General reference / lookup post members read later (plan §3.1).</description>
    <label>Reference</label>
</RecordType>