force-app/main/default/objects/Content_Post__c/recordTypes/Trip_Report.recordType-meta.xml
<RecordType>
    <fullName>Trip_Report</fullName>
    <active>true</active>
    <description
  >Member-authored trip report. The only record type members can create (plan §3.3).</description>
    <label>Trip Report</label>
</RecordType>